--- a/index.css
+++ b/index.css
@@ -18,7 +18,11 @@ body {
 
     position: absolute;
     left: 25%;
-    top: 25%;
+    top: 15%;
+}
+
+.login-container h1 {
+    font-size: 2rem;
 }
 
 .input-field {
@@ -38,12 +42,12 @@ body {
 }
 
 #submit-button {
-    width: 100%;
+    width: 70%;
     border-radius: 25px;
     border: none;
     background-color: rgb(62, 147, 216);
     color: white;
-    padding: 5%;
+    padding: 3%;
 }
 
 #submit-button:hover {
