--- a/index.css
+++ b/index.css
@@ -1,56 +1,73 @@
+:root {
+    --text-color: #c5d5ea;
+    --main-color: #759eb8;
+    --background-color: #d8e1e9;
+    --alt-color: #7392b7;
+    --alt-color2: #b3c5d7;
+}
+
 body {
-    background-color: rgb(243, 252, 252);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: var(--background-color);
+    font-family: 'Courier New', Courier, monospace, monospace;
+    color: var(--main-color);
 }
 
 .login-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 0.5px solid rgba(rgb(0, 0, 0), 0.5);
+
+    border: 0.5px solid rgba(var(--alt-color), 0.5);
     border-radius: 25px;
-    width: 30%;
+    width: 20%;
     height: auto;
-    padding: 10%;
-    background-color: rgb(255, 255, 255);
+    padding: 5%;
+    background-color: var(--main-color);
     box-shadow: 5px 5px 10px 10px rgba(0, 0, 0, .01);
     gap: 2rem;
 
     position: absolute;
-    left: 25%;
-    top: 15%;
+    left: 35%;
+    top: 20%;
 }
 
 .login-container h1 {
-    font-size: 2rem;
+    font-size: 3vw;
+    color: var(--alt-color2);
 }
 
 .input-field {
     width: 100%;
-    height: 100%;
-    border-top: 0px;
-    border-right: 0px;
-    border-bottom: 1px;
-    border-left: 0px;
+    height: 2vw;
     border-style: solid;
-    border-color: rgba(0, 0, 0, .2);
+    border-radius: 10px;
+    border-color: var(--main-color);
+    background-color: var(--background-color);
+    color: var(--alt-color);
+    font-size: 1vw;
+    text-align: center;
 }
 
 .input-field:focus {
     outline: none;
-    border-color: rgba(0, 0, 0, 1);
+    border-color: var(--background-color);
 }
 
 #submit-button {
-    width: 70%;
-    border-radius: 25px;
+    width: 50%;
+    height: 3vw;
     border: none;
-    background-color: rgb(62, 147, 216);
-    color: white;
+    border-radius: 10px;
+    background-color: var(--alt-color2);
+    color: var(--alt-color);
     padding: 3%;
+    font-size: 1vw;
+    align-items: center;
+    font-weight: bold;
 }
 
 #submit-button:hover {
     cursor: pointer;
-    background-color: rgb(83, 158, 219);
+    background-color: var(--alt-color);
+    color: var(--alt-color2);
 }
