--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@
     --background-color: #d8e1e9;
     --alt-color: #7392b7;
     --alt-color2: #b3c5d7;
+    --dark-color: #678ba1;
 }
 
 body {
@@ -23,7 +24,7 @@ body {
     height: auto;
     padding: 5%;
     background-color: var(--main-color);
-    box-shadow: 5px 5px 10px 10px rgba(0, 0, 0, .01);
+    box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.03);
     gap: 2rem;
 
     position: absolute;
@@ -33,7 +34,7 @@ body {
 
 .login-container h1 {
     font-size: 3vw;
-    color: var(--alt-color2);
+    color: var(--background-color);
 }
 
 .input-field {
@@ -61,9 +62,10 @@ body {
     background-color: var(--alt-color2);
     color: var(--alt-color);
     padding: 3%;
-    font-size: 1vw;
+    font-size: 1.5vw;
     align-items: center;
     font-weight: bold;
+    line-height: 30%;
 }
 
 #submit-button:hover {
