--- a/index.css
+++ b/index.css
@@ -59,8 +59,8 @@ body {
     height: 3vw;
     border: none;
     border-radius: 10px;
-    background-color: var(--alt-color2);
-    color: var(--alt-color);
+    background-color: var(--text-color);
+    color: var(--main-color);
     padding: 3%;
     font-size: 1.5vw;
     align-items: center;
