--- a/index.css
+++ b/index.css
@@ -1,68 +1,113 @@
 :root {
     --text-color: #c5d5ea;
-    --main-color: #759eb8;
+    --main-color: #290088;
     --background-color: #d8e1e9;
     --alt-color: #7392b7;
     --alt-color2: #b3c5d7;
     --dark-color: #678ba1;
+    height: 100vh;
+    width: 100%;
+    background-color: var(--background-color);
 }
 
 body {
-    background-color: var(--background-color);
     font-family: 'Courier New', Courier, monospace, monospace;
-    color: var(--main-color);
+    height: 100vh;
+    margin: 0;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+}
+
+.col {
+    display: flex;
+    flex-direction: column;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 }
 
 .login-container {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
 
     border: 0.5px solid rgba(var(--alt-color), 0.5);
     border-radius: 25px;
-    width: 30%;
-    height: auto;
-    padding: 5%;
+    width: 40%;
+    height: 60%;
+    padding: 1%;
     background-color: var(--main-color);
+    color: var(--background-color);
     box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.03);
-    gap: 2rem;
-
-    position: absolute;
-    left: 30%;
-    top: 20%;
 }
 
 .login-container h1 {
-    font-size: 3vw;
+    font-size: 4vw;
     color: var(--background-color);
+}
+
+.login-container p {
+    font-size: 1vw;
+    color: var(--background-color);
+}
+
+.login-container a {
+    color: inherit;
+}
+
+.input-row {
+    border-style: solid;
+    border-width: 1px;
+    border-left: 0;
+    border-top: 0;
+    border-right: 0;
+    border-color: var(--background-color);
+    width: 70%;
+}
+
+.material-symbols-outlined {
+    font-size: 2.5vw !important;
 }
 
 .input-field {
     width: 100%;
-    height: 3vw;
-    border-style: solid;
-    border-radius: 10px;
-    border-color: var(--main-color);
-    background-color: var(--background-color);
-    color: var(--alt-color);
-    font-size: 2vw;
+    height: 3vh;
+    border: none;
+    color: var(--background-color);
+    background-color: transparent;
+    font-size: 1.5vw;
     text-align: center;
 }
 
 .input-field:focus {
     outline: none;
-    border-color: var(--background-color);
+}
+
+.input-field::placeholder {
+    color: var(--alt-color2);
+}
+
+#checkbox {
+    border: none;
 }
 
 #submit-button {
     width: 50%;
-    height: 3vw;
+    height: 2vw;
     border: none;
     border-radius: 10px;
     background-color: var(--text-color);
     color: var(--main-color);
     padding: 3%;
-    font-size: 1.5vw;
+    font-size: 1vw;
     align-items: center;
     font-weight: bold;
     line-height: 30%;
@@ -72,4 +117,8 @@ body {
     cursor: pointer;
     background-color: var(--alt-color);
     color: var(--alt-color2);
+}
+
+#register-link {
+    font-size: 1vw;
 }
