--- a/index.css
+++ b/index.css
@@ -1,9 +1,10 @@
 :root {
-    --text-color: #c5d5ea;
+    --sec-color: #c5d5ea;
     --main-color: #290088;
     --background-color: #d8e1e9;
     --alt-color: #7392b7;
     --alt-color2: #b3c5d7;
+    --alt-color3: #005F88;
     --dark-color: #678ba1;
     height: 100vh;
     width: 100%;
@@ -36,26 +37,28 @@ body {
 .login-container {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
 
     border: 0.5px solid rgba(var(--alt-color), 0.5);
     border-radius: 25px;
-    width: 40%;
+    width: 30%;
+    min-width: 300px;
     height: 60%;
+    min-height: 350px;
     padding: 1%;
     background-color: var(--main-color);
     color: var(--background-color);
-    box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.03);
+    box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.08);
 }
 
 .login-container h1 {
-    font-size: 4vw;
+    font-size: 2rem;
     color: var(--background-color);
 }
 
 .login-container p {
-    font-size: 1vw;
+    font-size: 1rem;
     color: var(--background-color);
 }
 
@@ -74,16 +77,16 @@ body {
 }
 
 .material-symbols-outlined {
-    font-size: 2.5vw !important;
+    font-size: 2rem !important;
 }
 
 .input-field {
     width: 100%;
-    height: 3vh;
+    height: 100%;
     border: none;
     color: var(--background-color);
     background-color: transparent;
-    font-size: 1.5vw;
+    font-size: 1rem;
     text-align: center;
 }
 
@@ -101,13 +104,13 @@ body {
 
 #submit-button {
     width: 50%;
-    height: 2vw;
+    height: auto;
     border: none;
     border-radius: 10px;
-    background-color: var(--text-color);
+    background-color: var(--sec-color);
     color: var(--main-color);
     padding: 3%;
-    font-size: 1vw;
+    font-size: 1rem;
     align-items: center;
     font-weight: bold;
     line-height: 30%;
@@ -115,10 +118,10 @@ body {
 
 #submit-button:hover {
     cursor: pointer;
-    background-color: var(--alt-color);
-    color: var(--alt-color2);
+    background-color: var(--alt-color3);
+    color: var(--sec-color);
 }
 
 #register-link {
-    font-size: 1vw;
+    font-size: 1rem;
 }
