--- a/index.css
+++ b/index.css
@@ -1,11 +1,6 @@
 :root {
-    --sec-color: #c5d5ea;
-    --main-color: #290088;
-    --background-color: #d8e1e9;
-    --alt-color: #7392b7;
-    --alt-color2: #b3c5d7;
-    --alt-color3: #005F88;
-    --dark-color: #678ba1;
+    --off-white: #F2F2F2;
+    --off-black: #161616;
     height: 100vh;
     width: 100%;
     background-color: var(--background-color);
@@ -13,6 +8,7 @@
 
 body {
     font-family: 'Courier New', Courier, monospace, monospace;
+    letter-spacing: 2px;
     height: 100vh;
     margin: 0;
 }
@@ -40,15 +36,15 @@ body {
     justify-content: space-evenly;
     align-items: center;
 
-    border: 0.5px solid rgba(var(--alt-color), 0.5);
     border-radius: 25px;
     width: 30%;
     min-width: 300px;
     height: 60%;
     min-height: 350px;
     padding: 1%;
-    background-color: var(--main-color);
-    color: var(--background-color);
+    background-color: transparent;
+    backdrop-filter: blur(20px);
+    color: var(--off-white);
     box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.08);
 }
 
@@ -88,6 +84,7 @@ body {
     background-color: transparent;
     font-size: 1rem;
     text-align: center;
+    margin-right: 10%;
 }
 
 .input-field:focus {
@@ -95,31 +92,38 @@ body {
 }
 
 .input-field::placeholder {
-    color: var(--alt-color2);
+    color: var(--off-white);
 }
 
 #checkbox {
-    border: none;
+    width: 20px;
+    height: 20px;
+}
+
+#checkbox-label {
+    display: inline-flex;
+    align-items: center;
+    margin-left: 5px;
+    font-size: 1rem;
+    color: var(--off-white);
 }
 
 #submit-button {
-    width: 50%;
-    height: auto;
-    border: none;
-    border-radius: 10px;
-    background-color: var(--sec-color);
-    color: var(--main-color);
-    padding: 3%;
+    padding: 10px 22px;
+    border-radius: 25px;
+    border-style: solid;
+    border-color: var(--off-white);
     font-size: 1rem;
-    align-items: center;
     font-weight: bold;
-    line-height: 30%;
+    background-color: transparent;
+    color: var(--off-white);
+    transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 #submit-button:hover {
     cursor: pointer;
-    background-color: var(--alt-color3);
-    color: var(--sec-color);
+    background-color: var(--off-black);
+    color: var(--off-white);
 }
 
 #register-link {
